# claude-workspace

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PYTHON-PATTERNS.md  README.md  ROADMAP.md  pyproject.toml
.claude/commands/: handoff.md  install-cw.md  orchestrate-phase.md  pull-and-execute.md  queue-debt.md  queue-plan.md  session-done.md
.github/workflows/: ci.yml  release.yml
config/: CONFIG_REFERENCE.md  clients.example.yaml
docs/: INSTALL.md
layouts/: client.kdl.j2
scripts/: install-skills.sh  install.sh  release.sh
src/cw/: __init__.py  __main__.py  cli.py  config.py  daemon.py  exceptions.py  handoff.py  history.py  hooks.py  models.py  notify.py  plan.py  plugin.py  prompts.py  queue.py  session.py  tui.py  tui.tcss  worktree.py  wrapper.py  zellij.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_delegate.py  test_handoff.py  test_history.py  test_hooks.py  test_models.py  test_notify.py  test_plan.py  test_plugin.py  test_prompts.py  test_queue.py  test_session.py  test_session_helpers.py  test_structured_handoff.py  test_tui.py  test_worktree.py  test_wrapper.py  test_zellij.py
zellij-plugin/: Cargo.toml  Makefile
zellij-plugin/src/: history.rs  lib.rs  render.rs  state.rs
