[project]
name = "claude-workspace"
version = "0.1.0"
description = "Multi-session workspace orchestrator for Claude Code"
readme = "README.md"
authors = [
    { name = "Matthew Warren", email = "mattwwarren@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
cw = "cw.cli:main"

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cw"]
