[project]
name = "claude-workspace"
version = "0.3.0"
description = "Multi-session workspace orchestrator for Claude Code"
readme = "README.md"
authors = [
    { name = "Matthew Warren", email = "mattwwarren@users.noreply.github.com" }
]
license = "Unlicense"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.18.6",
    "textual>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mattwwarren/claude-workspace"
Repository = "https://github.com/mattwwarren/claude-workspace"
Issues = "https://github.com/mattwwarren/claude-workspace/issues"

[project.scripts]
cw = "cw.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.24",
    "freezegun>=1.2",
    "pre-commit>=3.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "pytest-cov>=6.0",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLW",  # pylint warning
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PERF", # perflint
    "FURB", # refurb
]
ignore = [
    "T201",  # print() is our UI output mechanism (via click.echo, but also direct)
    "S603",  # subprocess calls are core to zellij integration
    "S607",  # partial executable path (zellij) is expected
    "S701",  # jinja2 autoescape - templates render KDL config, not HTML
]

[tool.ruff.lint.per-file-ignores]
"src/cw/models.py" = [
    "TCH003",  # Pydantic models need runtime access to Path, UUID, datetime etc.
]
"src/cw/history.py" = [
    "PLC0415",  # Lazy imports in record_event: notify (circular) and config (conditional)
]
"src/cw/cli.py" = [
    "PLC0415",  # Lazy import of cw.tui to avoid loading Textual for non-TUI commands
]
"tests/**" = [
    "S101",   # assert is fine in tests
    "ARG001", # unused function args common in fixtures/mocks
    "ARG002", # unused method args common in test classes
    "SLF001", # private member access is fine in tests
    "PT004",  # fixture doesn't return anything - not always needed
]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["cw"]
